# AegisNet

./: .gitignore
AegisNet/: .gitignore  README.md  docker-compose.yml
AegisNet/backend/: .env  Cargo.toml  build.rs  build_log.txt  build_log_utf8.txt  check_output.txt  compile_error.txt  error_log.txt  scan_results.json  scan_results_utf8.json
AegisNet/backend/src/: db.rs  main.rs
AegisNet/backend/src/api/: ingest.rs  mod.rs  scan.rs  stats.rs  traffic.rs
AegisNet/backend/src/entities/: log.rs  user.rs
AegisNet/backend/src/scanner/: core.rs  mod.rs
AegisNet/backend/src/scanner/discovery/: arp.rs  icmp.rs  llmnr.rs  mdns.rs  mod.rs  netbios.rs  passive.rs  ssdp.rs  tcp.rs  udp.rs
AegisNet/backend/src/scanner/fingerprint/: banner.rs  http.rs  mod.rs  os.rs  oui.rs  oui_live.rs  smb.rs  snmp.rs
AegisNet/backend/src/scanner/traffic/: mod.rs  store.rs
AegisNet/backend/src/scanner/vuln/: db.rs  mod.rs
AegisNet/backend/src/services/: cve.rs  detection.rs  discovery.rs  mod.rs  normalization.rs  scanner.rs
AegisNet/frontend/: package-lock.json  package.json  tailwind.config.js
AegisNet/frontend/src/: App.tsx  index.css
AegisNet/frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  TrafficDashboard.tsx
AegisNet/frontend/src/pages/: Dashboard.tsx  Logs.tsx  Scanner.tsx
