[package]
name = "aegis_net_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Web Framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Database (SeaORM + SQLite)
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }

# Utilities
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
dashmap = "5.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
socket2 = "0.5"
dns-lookup = "2.0"
